--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "fs": "*",
+    "lucide-react": "^0.474.0",
     "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -50,7 +52,7 @@
     "buffer": "^5.7.1",
     "chai": "^4.3.6",
     "crypto-browserify": "^3.12.0",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.7",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
