--- a/contracts/credit-score/Cargo.toml
+++ b/contracts/credit-score/Cargo.toml
@@ -14,7 +14,7 @@ soroban-sdk = "20.0.0"
 [dev-dependencies]
 soroban-sdk = { version = "20.0.0", features = ["testutils"] }
 
-[[profile.release]]
+[profile.release]
 opt-level = "z"
 overflow-checks = true
 debug = 0
@@ -23,7 +23,3 @@ debug-assertions = false
 panic = "abort"
 codegen-units = 1
 lto = true
-
-[profile.release-with-logs]
-inherits = "release"
-debug-assertions = true
