--- a/examples/credit-scoring-app/tsconfig.json
+++ b/examples/credit-scoring-app/tsconfig.json
@@ -1,5 +1,8 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
@@ -11,14 +14,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true
+    "noEmit": false
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "dist",
-    "build"
+    "**/*.test.ts"
   ]
 }
