--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,17 +22,18 @@
   "author": "ChenAIKit Team",
   "license": "MIT",
   "dependencies": {
-    "@stellar/stellar-sdk": "^11.0.0",
-    "axios": "^1.6.0"
+    "@stellar/stellar-sdk": "^11.3.0",
+    "axios": "^1.12.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "eslint": "^8.0.0",
+    "@types/node": "^20.0.0",
+    "@types/urijs": "^1.19.25",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist",
