--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "@chenaikit/cli",
+  "name": "@chenaikit/core",
   "version": "0.1.0",
-  "description": "CLI tool for ChenAIKit - AI-powered blockchain applications",
+  "description": "Core TypeScript SDK for ChenAIKit - AI-powered blockchain applications",
   "main": "dist/index.js",
-  "bin": {
-    "chenaikit": "./bin/chenaikit.js"
-  },
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -18,20 +16,17 @@
     "soroban",
     "ai",
     "blockchain",
-    "cli",
-    "typescript"
+    "typescript",
+    "sdk"
   ],
   "author": "ChenAIKit Team",
   "license": "MIT",
   "dependencies": {
-    "@chenaikit/core": "workspace:*",
-    "commander": "^11.0.0",
-    "chalk": "^4.1.2",
-    "inquirer": "^8.2.0"
+    "@stellar/stellar-sdk": "^11.0.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/inquirer": "^8.2.0",
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
@@ -41,7 +36,6 @@
   },
   "files": [
     "dist",
-    "bin",
     "README.md"
   ],
   "publishConfig": {
