--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "react-scripts": "5.0.1",
     "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.0"
   },
   "browserslist": {
     "production": [
