--- a/backend/package.json
+++ b/backend/package.json
@@ -12,21 +12,23 @@
   },
   "dependencies": {
     "@chenaikit/core": "workspace:*",
-    "express": "^4.18.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
     "helmet": "^7.0.0",
-    "dotenv": "^16.0.0"
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
     "@types/cors": "^2.8.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "jest": "^29.0.0",
+    "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
-    "eslint": "^8.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   }
 }
