--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,6 +11,8 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
