--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,7 +10,7 @@ jobs:
     build-test:
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [windows-latest]
         
         runs-on: ${{matrix.os}}
 
@@ -18,16 +18,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Install pnpm
+              uses: pnpm/action-setup@v3
+              with: 
+                version: 8
+
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with: 
                 node-version: 20
                 cache: 'pnpm'
-            
-            - name: Install pnpm
-              uses: pnpm/action-setup@v3
-              with: 
-                version: 8
 
             - name: Install dependencies
               run: pnpm install
