--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^7.0.0",
+    "ioredis": "^5.8.0"
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.27"
   },
