--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "express": "^4.18.0",
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
+    "ioredis": "^5.8.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
