--- a/backend/package.json
+++ b/backend/package.json
@@ -5,28 +5,37 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "ts-node --watch src/index.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "test": "jest",
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
     "@chenaikit/core": "workspace:*",
-    "express": "^4.18.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^7.0.0",
-    "dotenv": "^16.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "jest": "^29.0.0",
+    "@types/express": "^4.17.0",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/jest": "^29.0.0",
-    "eslint": "^8.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   }
 }
